--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,17 @@ input {
   width: 300px;
 }
 
+#dev-key {
+  margin-top: 1%;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 300px;
+}
+
 #chooseDirectory {
+  margin-top: 1%;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
@@ -104,6 +114,17 @@ input {
   margin-right: auto;
   display: block;
   font-size: 36px;
+}
+
+a {
+  /*margin-top: 1%; */
+  width: 275px;
+  align-items: center;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  font-size: 12px;
 }
 
 .autocomplete-suggestions {
